# KEGGaNOG

./: CITATION.cff  KEGGaNOG.py  MANIFEST.in  README.md  README_PyPI.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  python-package.yml  python-publish.yml
demo_data/: out.emapper.annotations
kegg_a_nog/: data_processing.py  data_processing_multi.py  grouped_heatmap.py  grouped_heatmap_multi.py  kegg_a_nog.py  kegg_a_nog_multi.py  simple_heatmap.py  simple_heatmap_multi.py
kegganog/: __init__.py  app.py  corrnet.py  kegganog.py  kegganog_multi.py  schemas.py  version.py  web.py
kegganog/cheatmaps/: grouped_heatmap.py  grouped_heatmap_multi.py  heatmaps_common.py  simple_heatmap.py  simple_heatmap_multi.py
kegganog/kgnplot/: __init__.py  barplot.py  base.py  boxplot.py  corrnet.py  heatmap.py  radarplot.py  stackedbar.py  streamgraph.py
kegganog/processing/: data_processing.py  data_processing_multi.py  pipeline.py
kegganog/static/: index.html
kegganog/static/css/: center-panel.css  header.css  layout.css  left-panel.css  right-panel.css  tokens.css  utils.css
kegganog/static/js/: analysis.js  app.js  right-panel.js  security.js  state.js  subtabs.js  templates.js  ui.js  upload.js  viz.js
src/: data_processing.py  data_processing_multi.py  grouped_heatmap.py  grouped_heatmap_multi.py  kegganog_multi.py  simple_heatmap.py  simple_heatmap_multi.py
tests/: conftest.py  test_app_helpers.py  test_data_processing.py  test_data_processing_multi.py  test_heatmaps_characterization.py  test_kegganog_cli.py  test_kgnplot.py  test_pipeline.py  test_schemas.py  test_web_launch.py  test_web_routes.py
tests/fixtures/: grouped_decoder.tsv  multi_decoder.tsv  simple_decoder.tsv
